# FinShape3D

./: .gitignore  CONTRIBUTING.md  FinShape2D_R-GUI_2.0.13.py  FinShape3D_1.1.9.py  README.md  dummy.csv  finshape2d.py  finshape3d.py  pyproject.toml  requirements.txt  run_test.py
core/io/: data_loader.py
core/math/: bezier.py  geometry.py
core/reconstruction/: wireframe.py
core/ui/: gui_2d.py  plotting_3d.py
tests/integration/: test_finshape3d.py
tests/unit/: test_bezier.py  test_data_loader.py  test_geometry.py  test_gui_2d.py  test_gui_generate3d_error_handling.py  test_wireframe.py
